<resources>
    <string name="app_name">مدرسه من (اولیا)</string>
    <string name="hint_username">نام کاربری</string>
    <string name="hint_url">آدرس ورودی</string>
    <string name="hint_title_message">عنوان پیام</string>
    <string name="hint_title_activity">عنوان فعالیت</string>
    <string name="hint_desc_message">متن پیام</string>
    <string name="hint_desc_activity">توضیحات فعالیت</string>
    <string name="hint_password">رمز عبور</string>
    <string name="tab_profile">پروفایل</string>
    <string name="tab_activities">تکالیف</string>
    <string name="tab_notifications">اعلان ها</string>
    <string name="tab_schedule">برنامه هفتگی</string>
    <string name="btn_login">ورود</string>
    <string name="btn_change_student">انتخاب فرزند دیگر</string>
    <string name="btn_send">ارسال</string>
    <string name="btn_send_message">ارسال پیام به</string>
    <string name="btn_send_activity">تعریف فعالیت برای</string>
    <string name="btn_save">ذخیره</string>
    <string name="failed_server">failed</string>
    <string name="toast_empty_edittext">لطفا نام کاربری و رمز عبور خود را وارد کنید</string>
    <string name="hint_school_name">نام مدرسه ...</string>
    <string name="priority">زنگ %1$d</string>
    <string name="toast_error_school">لطفا مدرسه خود را انتخاب کنید</string>
    <string name="toast_warning_duplicate_school">این مدرسه قبلا ثبت شده است</string>
    <string name="toast_exit">لطفا برای خروج دوباره تلاش کنید</string>
    <string name="text_choose_school">انتخاب مدرسه از لیست:</string>
    <string name="text_time_schedule">%1$s تا %2$s</string>
    <string name="title_activities">لیست فعالیت های</string>
    <string name="toast_success_notif">پیام شما با موفقیت ارسال شد</string>
    <string name="toast_success_update">با موفقیت به روزرسانی شد</string>
    <string-array name="schools">
        <item>مدرسه البرز</item>
        <item>مدرسه آبان</item>
        <item>مدرسه حدیث</item>
        <item>مدرسه الماس</item>
        <item>مدرسه ادب</item>
        <item>مدرسه بی ادب</item>
        <item>مدرست سبحان</item>
        <item>ابن سینا</item>
    </string-array>
    <string-array name="students">
        <item>حسن جعفری</item>
        <item>همایون جعفری</item>
        <item>علی جعفری</item>
    </string-array>
    <string-array name="notification_type">
        <item>عمومی</item>
        <item>انضباطی</item>
        <item>درخواستی</item>
    </string-array>
    <string-array name="activity_type">
        <item>فعالیت اولیا</item>
        <item>فعالیت کلاسی</item>
        <item>کار در منزل</item>
        <item>کوئیز</item>
    </string-array>

</resources>
