<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/space_20_dp"
            android:paddingRight="@dimen/space_20_dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space_30_dp"
                android:src="@drawable/logo"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@android:color/white"
                app:layout_collapseMode="parallax" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_10_dp"
                android:hint="@string/hint_school_name"
                android:text="@string/text_choose_school"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtAutoSchools"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_30_dp"

                android:inputType="textAutoComplete" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white_blank"
                android:text="@string/btn_login"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>