<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_layout" />


    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_20_dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="info.androidhive.bottomsheet.MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:gravity="right|center"
            android:textStyle="bold"
            android:hint="@string/hint_title_activity"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_details"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:gravity="right"
            android:hint="@string/hint_desc_activity"
            android:inputType="textMultiLine" />


    </LinearLayout>
    <!-- Adding bottom sheet after main content -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="48dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="3">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSendMessage"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_pink_blank"
                android:text="@string/btn_send"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <!-- Your scrollable view -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <!-- Adding any other scroll view, with BottomSheetBehavior -->
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_peekHeight="312dp"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>